src/app/shared/corousel/corousel.component.scss
@import '../../../variables.scss';

.carousel-container {
  overflow: hidden;
  width: 100%;
  white-space: nowrap;

  .carousel {
    transition: transform 1s ease-in-out;
    flex-wrap: wrap;
    font-size: 36px;
    display: inline-block;
    width: 100%;
  }
}

.title {
  font-size: 1em;
  color: #fff;
  text-transform: uppercase;
  font-weight: 600;
  word-break: break-word;


  small {
    font-size: 0.5em;
    display: block;
    margin-bottom: 10px;
    text-transform: capitalize;
    font-weight: 600;
    word-break: break-word;
  }

  .uppercase {
    text-transform: uppercase;
  }

  .blue-color {
    color: #0037c1;
  }
}

.desc {
  font-size: .5em;
  color: #fff;
  word-break: break-word;

}

.carousel-item {
  padding: 20px;
  text-wrap: pretty;
  display: flex;
  flex-direction: column;
}

@media screen and (max-width: $sm-screen) {
  .carousel-container {
    padding: 0 16px;
   /*  font-size: 18px; */
  }
}

